# ga3

./: .gitignore  CMakeLists.txt  README  README.md  conanfile.py  ga2.h  ga2Chromosome.cpp  ga2Chromosome.h  ga2Gene.h  ga2Population.cpp  ga2Population.h
ThreadPool/: ThreadPool.hpp
ga3/: chromosome.cpp  chromosome.hpp  ga2.h  ga3.hpp  gene.h  gene.hpp  population.cpp  population.h  population.hpp  types.hpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  ThreadPool.cpp  chromosome.cpp  main.cpp  population.cpp  test.h
